[package]
name = "danmu2ass"
version = "0.2.2"
edition = "2021"
authors = ["gwy15 <gwy15thu@gmail.com>"]
description = "哔哩哔哩的 xml 文件转化为 ass 文件"
license = "MIT"
homepage = "https://github.com/gwy15/danmu2ass"
repository = "https://github.com/gwy15/danmu2ass"
documentation = "https://docs.rs/danmu2ass/"

[features]
default = ["quick_xml", "rustls"]
# xml 解析方法
xml_rs = ["xml-rs"]
quick_xml = ["quick-xml"]
# tls
native-tls = ["reqwest/native-tls", "biliapi/native-tls"]
rustls = ["reqwest/rustls-tls", "biliapi/rustls"]


[dependencies]
anyhow = "1.0.56"
float-ord = "0.3.2"
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
glob = "0.3.0"
log = "0.4.15"
pretty_env_logger = "0.4.0"
rayon = "1.5.1"

xml-rs = { version = "0.8.4", optional = true }
quick-xml = { version = "0.22.0", optional = true }

# 从 哔哩哔哩 下载视频的弹幕并转换为 ass 文件
biliapi = { version = "0.1.17", default-features = false }
prost = "0.10.0"
reqwest = { version = "0.11.10", default-features = false }
url = "2.2.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.21"
serde_json = "1.0.79"
